--- a/styles/pages/checkout/checkout-header.css
+++ b/styles/pages/checkout/checkout-header.css
@@ -27,8 +27,9 @@
 }
 
 .amazon-logo {
-  width: 100px;
-  margin-top: 12px;
+  width: 180px;
+  margin-top: 5px;
+  padding-top: 15px;
 }
 
 .amazon-mobile-logo {
@@ -47,7 +48,7 @@
   .amazon-mobile-logo {
     display: inline-block;
     height: 35px;
-    margin-top: 5px;
+    margin-top: 10px;
   }
 }
 
@@ -61,6 +62,8 @@
 
   display: flex;
   justify-content: center;
+  
+  padding-top: 10px;
 }
 
 .return-to-home-link {
@@ -90,6 +93,7 @@
 .checkout-header-right-section {
   text-align: right;
   width: 150px;
+  padding-top: 10px;
 }
 
 @media (max-width: 1000px) {
