--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -1,5 +1,5 @@
 .amazon-header {
-  background-color: rgb(19, 25, 33);
+  background-color: rgb(79, 64, 143);
   color: white;
   padding-left: 15px;
   padding-right: 15px;
@@ -39,8 +39,9 @@
 }
 
 .amazon-logo {
-  width: 100px;
+  width: 180px;
   margin-top: 5px;
+  
 }
 
 .amazon-mobile-logo {
@@ -72,7 +73,7 @@
   width: 0;
   font-size: 16px;
   height: 38px;
-  padding-left: 15px;
+  padding-left: 20px;
   border: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -81,7 +82,7 @@
 }
 
 .search-button {
-  background-color: rgb(254, 189, 105);
+  background-color: rgb(105, 254, 217);
   border: none;
   width: 45px;
   height: 40px;
@@ -101,6 +102,7 @@
   flex-shrink: 0;
   display: flex;
   justify-content: end;
+  padding: 10px;
 }
 
 .orders-link {
